implementacion carpeta documentacion, texto personas y clase ordenadorArchivos corregida